# multicoretests

./: multicorecheck.opam  multicoretests.opam  out.txt  out1.txt
lib/: STM.ml  lin.ml
src/: dune
src/buffer/: dune
src/bytes/: a.out  bytes_test.ml  dune  lin_bug.ml  lin_tests.ml  stubs.c  stubs_length.c  test.ml
src/hashtbl/: dune  lin_tests.ml
src/kcas/: dune  lin_tests.ml
src/lazy/: dune  lazy_lin_test.ml
src/neg_tests/: dune  ref_test.ml
src/queue/: dune  lin_tests.ml
src/stack/: dune  lin_tests.ml
