;; Test of the buffer library

;; this prevents the tests from running on a default build
(alias
 (name default)
 (package multicoretests)
 (deps buffer_stm_test.exe))


(executable
 (name buffer_stm_test)
 (modules buffer_stm_test)
 (libraries qcheck STM)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq)))

(rule
 (alias runtest)
 (package multicoretests)
 (deps buffer_stm_test.exe)
 (action (run ./%{deps} --no-colors --verbose)))
