;; Linearizability tests of the kcas library

;; this prevents the tests from running on a default build
(alias
 (name default)
 (package multicoretests)
 (deps lin_tests.exe))

(executable
 (name lin_tests)
 (modules lin_tests)
 (flags (:standard -w -27))
 (libraries qcheck lin kcas)
 (preprocess (pps ppx_deriving_qcheck ppx_deriving.show ppx_deriving.eq)))

; disable kcas test for now
; (rule
;  (alias runtest)
;  (package multicoretests)
;  (deps lin_tests.exe)
;  (action (run ./%{deps} --no-colors --verbose)))
