;; Parallel STM and Lin tests of the stdlib Lazy module

;; this prevents the tests from running on a default build
(alias
 (name default)
 (package multicoretests)
 (deps lazy_lin_test.exe lazy_stm_test.exe))

(executable
 (name lazy_stm_test)
 (modules lazy_stm_test)
 (libraries qcheck STM)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq)))

(rule
 (alias runtest)
 (package multicoretests)
 (deps lazy_stm_test.exe)
 (action (run ./%{deps} --no-colors --verbose)))

(executable
 (name lazy_lin_test)
 (modules lazy_lin_test)
 (libraries qcheck lin)
 (preprocess (pps ppx_deriving_qcheck ppx_deriving.show ppx_deriving.eq)))

(rule
 (alias runtest)
 (package multicoretests)
 (deps lazy_lin_test.exe)
 (action (run ./%{deps} --no-colors --verbose)))
